[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Spatial.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=2]
[ext_resource path="res://Scripts/TileGrid.gd" type="Script" id=3]
[ext_resource path="res://RedButton.tres" type="StyleBox" id=4]
[ext_resource path="res://BlueButton.tres" type="StyleBox" id=5]

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1.31134e-07, 0.34202, -0.939693, 0, 0.939693, 0.34202, 1, -4.48504e-08, 1.23226e-07, -17.1706, 8.12711, 0 )
fov = 25.0
script = ExtResource( 2 )

[node name="TileGrid" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.795921, -0.533848, -0.447872 )
script = ExtResource( 3 )

[node name="UI" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="Score" type="Label" parent="UI"]
margin_right = 27.0
margin_bottom = 15.0
rect_scale = Vector2( 5, 5 )
text = "as"

[node name="t1" type="Label" parent="UI"]
margin_left = 270.0
margin_right = 321.0
margin_bottom = 29.0
rect_scale = Vector2( 2, 2 )
text = "as"

[node name="fps_label" type="Label" parent="UI"]
margin_left = 810.917
margin_right = 861.917
margin_bottom = 29.0
rect_scale = Vector2( 2, 2 )
text = "as"

[node name="t2" type="Label" parent="UI"]
margin_left = 270.0
margin_top = 40.0
margin_right = 321.0
margin_bottom = 69.0
rect_scale = Vector2( 2, 2 )
text = "as"

[node name="LeftBT_moveLeft" type="Button" parent="UI"]
margin_left = 2.0
margin_top = 402.25
margin_right = 117.0
margin_bottom = 482.25
rect_pivot_offset = Vector2( 170, 49 )
custom_styles/normal = ExtResource( 4 )

[node name="LeftBT_moveRight" type="Button" parent="UI"]
margin_left = 202.917
margin_top = 404.0
margin_right = 312.917
margin_bottom = 480.0
rect_pivot_offset = Vector2( 170, 49 )
custom_styles/normal = ExtResource( 4 )

[node name="LeftBT_action" type="Button" parent="UI"]
margin_top = 280.0
margin_right = 118.0
margin_bottom = 362.0
rect_pivot_offset = Vector2( 170, 49 )
custom_styles/normal = ExtResource( 4 )

[node name="RightBT_moveLeft" type="Button" parent="UI"]
margin_left = 602.0
margin_top = 400.0
margin_right = 717.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 170, 49 )
custom_styles/normal = ExtResource( 5 )

[node name="RightBT_action" type="Button" parent="UI"]
visible = false
margin_left = 800.0
margin_top = 277.083
margin_right = 918.0
margin_bottom = 359.083
rect_pivot_offset = Vector2( 170, 49 )
custom_styles/normal = ExtResource( 5 )

[node name="RightBT_moveRight" type="Button" parent="UI"]
margin_left = 810.917
margin_top = 403.75
margin_right = 920.917
margin_bottom = 479.75
rect_pivot_offset = Vector2( 170, 49 )
custom_styles/normal = ExtResource( 5 )
[connection signal="button_down" from="UI/LeftBT_moveLeft" to="." method="_on_LeftBT_moveLeft_button_down"]
[connection signal="button_down" from="UI/LeftBT_moveRight" to="." method="_on_LeftBT_moveRight_button_down"]
[connection signal="button_down" from="UI/LeftBT_action" to="." method="_on_LeftBT_action_button_down"]
[connection signal="button_down" from="UI/RightBT_moveLeft" to="." method="_on_RightBT_moveLeft_button_down"]
[connection signal="button_down" from="UI/RightBT_action" to="." method="_on_RightBT_action_button_down"]
[connection signal="button_down" from="UI/RightBT_moveRight" to="." method="_on_RightBT_moveRight_button_down"]
